infra/k8s/auth-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      component: auth-service
  template:
    metadata:
      labels:
        component: auth-service
    spec:
      containers:
        - name: auth
          image: abdulrehmanconq/auth-service
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: auth-service
  ports:
    - name: auth-service
      protocol: TCP
      port: 3000
      targetPort: 3000
