infra/k8s/auth-postgres-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      component: auth-postgres-service
  template:
    metadata:
      labels:
        component: auth-postgres-service
    spec:
      volumes:
        - name: database-storage
          persistentVolumeClaim:
            claimName: database-pvc
      containers:
        - name: auth-postgres-service
          image: postgres:alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: database-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres-service
spec:
  selector:
    component: auth-postgres-service
  ports:
    - name: auth-postgres-service
      port: 5432
      targetPort: 5432
      protocol: TCP
